# COON

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benchmarks/: .env.example  BENCHMARK.md  README.md  benchmark.py  benchmark_results.json  package.json  tsconfig.json
benchmarks/results/: COON-Benchmark-Summary.md  README.md  compression-efficiency-2025-12-05T15-36-02.json  compression-efficiency-2025-12-05T15-36-02.md  real-code-analysis-2025-12-05T13-24-11.json  real-code-analysis-2025-12-05T13-24-11.md
benchmarks/scripts/: comprehension-benchmark.ts  compression-efficiency-benchmark.ts  generation-benchmark.ts  run-all.ts  validate-models.ts  validate-questions.ts
benchmarks/src/: constants.ts  coon-generator.ts  datasets-large.ts  datasets-logic.ts  datasets.ts  evaluate.ts  index.ts  normalize.ts  report.ts  types.ts
benchmarks/src/providers/: factory.ts  gemini.ts  groq.ts  index.ts  minimax.ts  openrouter.ts  types.ts  zai.ts
benchmarks/src/questions/: comprehension.ts  generation.ts  index.ts  logic-comprehension.ts  structural.ts
coon/: __init__.py  analyzer.py  compressor.py  formatter.py  metrics.py  parser.py  registry.py  strategy.py  validator.py
docs/: API.md  index.md  jest.config.js  package-lock.json  package.json  tailwind.config.js
docs/.vitepress/: meta.ts
docs/app/: page.tsx
docs/app/playground/: page.tsx
docs/cli/: index.md
docs/components/: CopyButton.tsx
docs/ecosystem/: implementations.md
docs/guide/: compression-efficiency-benchmark.md  compression-efficiency-visual-summary.md  format-overview.md  getting-started.md  llm-comprehension-benchmark.md
docs/lib/: coon-browser.ts  navigation.ts
docs/lib/__tests__/: coon-browser.test.ts
docs/reference/: api.md  syntax-cheatsheet.md
(+3 files in other folders)
