[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coon"
version = "0.1.0"
authors = [
    {name = "AffanShaikhsurab", email = "affanshaikhsurabofficial@gmail.com"},
]
description = "Token-efficient code compression for Dart/Flutter and LLM contexts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "compression",
    "dart",
    "flutter",
    "llm",
    "token-optimization",
    "code-compression",
    "ai",
    "multi-agent"
]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/AffanShaikhsurab/COON"
Documentation = "https://github.com/AffanShaikhsurab/COON/blob/main/docs/API.md"
Repository = "https://github.com/AffanShaikhsurab/COON"
"Bug Tracker" = "https://github.com/AffanShaikhsurab/COON/issues"

[project.scripts]
coon = "coon.cli:cli"

[tool.setuptools]
packages = ["coon"]

[tool.setuptools.package-data]
coon = ["py.typed"]
